Interpreter/MathGrammarParser.py
# Generated from MathGrammar.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MathGrammarParser ( Parser ):

    grammarFileName = "MathGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\n'", "'import'", "'from'", "'class'", 
                     "'def'", "'if'", "'elif'", "'else'", "'while'", "'for'", 
                     "'try'", "'except'", "'finally'", "'with'", "'pass'", 
                     "'break'", "'continue'", "'return'", "'raise'", "'yield'", 
                     "'async'", "'await'", "'global'", "'nonlocal'", "'assert'", 
                     "'lambda'", "'int'", "'float'", "'str'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'//'", "'%'", "'**'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'and'", 
                     "'or'", "'not'", "'&'", "'|'", "'^'", "'~'", "'<<'", 
                     "'>>'", "'='", "'+='", "'-='", "'*='", "'/='", "'//='", 
                     "'%='", "'**='", "'&='", "'|='", "'^='", "'<<='", "'>>='", 
                     "'('", "')'", "'['", "']'", "':'", "<INVALID>", "'\t'", 
                     "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "IMPORT", "FROM", "CLASS", 
                      "DEF", "IF", "ELIF", "ELSE", "WHILE", "FOR", "TRY", 
                      "EXCEPT", "FINALLY", "WITH", "PASS", "BREAK", "CONTINUE", 
                      "RETURN", "RAISE", "YIELD", "ASYNC", "AWAIT", "GLOBAL", 
                      "NONLOCAL", "ASSERT", "LAMBDA", "T_INT", "T_FLOAT", 
                      "T_STRING", "ID", "BOOLEAN", "STRING", "INTEGER", 
                      "FLOAT", "ADDITION", "SUBTRACTION", "MULTIPLICATION", 
                      "DIVISION", "FLOOR_DIVISION", "MODULO", "EXPONENT", 
                      "EQUALITY", "INEQUALITY", "LESS_THAN", "GREATER_THAN", 
                      "LESS_THAN_OR_EQUAL_TO", "GREATER_THAN_OR_EQUAL_TO", 
                      "LOGICAL_AND", "LOGICAL_OR", "LOGICAL_NOT", "BITWISE_AND", 
                      "BITWISE_OR", "BITWISE_XOR", "BITWISE_NOT", "LEFT_SHIFT", 
                      "RIGHT_SHIFT", "ASSIGNMENT", "ADDITION_ASSIGNMENT", 
                      "SUBTRACTION_ASSIGNMENT", "MULTIPLICATION_ASSIGNMENT", 
                      "DIVISION_ASSIGNMENT", "FLOOR_DIVISION_ASSIGNMENT", 
                      "MODULO_ASSIGNMENT", "EXPONENTIATION_ASSIGNMENT", 
                      "BITWISE_AND_ASSIGNMENT", "BITWISE_OR_ASSIGNMENT", 
                      "BITWISE_XOR_ASSIGNMENT", "LEFT_SHIFT_ASSIGNMENT", 
                      "RIGHT_SHIFT_ASSIGNMENT", "OPEN_PAREN", "CLOSED_PAREN", 
                      "OPEN_BRACKET", "CLOSED_BRACKET", "COLON", "END", 
                      "TAB", "COMMA", "WS" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_function_call = 2
    RULE_arg_list = 3
    RULE_function_def = 4
    RULE_arg_list_literal = 5
    RULE_suite = 6
    RULE_expr = 7
    RULE_term = 8
    RULE_factor = 9
    RULE_number = 10

    ruleNames =  [ "prog", "stat", "function_call", "arg_list", "function_def", 
                   "arg_list_literal", "suite", "expr", "term", "factor", 
                   "number" ]

    EOF = Token.EOF
    T__0=1
    IMPORT=2
    FROM=3
    CLASS=4
    DEF=5
    IF=6
    ELIF=7
    ELSE=8
    WHILE=9
    FOR=10
    TRY=11
    EXCEPT=12
    FINALLY=13
    WITH=14
    PASS=15
    BREAK=16
    CONTINUE=17
    RETURN=18
    RAISE=19
    YIELD=20
    ASYNC=21
    AWAIT=22
    GLOBAL=23
    NONLOCAL=24
    ASSERT=25
    LAMBDA=26
    T_INT=27
    T_FLOAT=28
    T_STRING=29
    ID=30
    BOOLEAN=31
    STRING=32
    INTEGER=33
    FLOAT=34
    ADDITION=35
    SUBTRACTION=36
    MULTIPLICATION=37
    DIVISION=38
    FLOOR_DIVISION=39
    MODULO=40
    EXPONENT=41
    EQUALITY=42
    INEQUALITY=43
    LESS_THAN=44
    GREATER_THAN=45
    LESS_THAN_OR_EQUAL_TO=46
    GREATER_THAN_OR_EQUAL_TO=47
    LOGICAL_AND=48
    LOGICAL_OR=49
    LOGICAL_NOT=50
    BITWISE_AND=51
    BITWISE_OR=52
    BITWISE_XOR=53
    BITWISE_NOT=54
    LEFT_SHIFT=55
    RIGHT_SHIFT=56
    ASSIGNMENT=57
    ADDITION_ASSIGNMENT=58
    SUBTRACTION_ASSIGNMENT=59
    MULTIPLICATION_ASSIGNMENT=60
    DIVISION_ASSIGNMENT=61
    FLOOR_DIVISION_ASSIGNMENT=62
    MODULO_ASSIGNMENT=63
    EXPONENTIATION_ASSIGNMENT=64
    BITWISE_AND_ASSIGNMENT=65
    BITWISE_OR_ASSIGNMENT=66
    BITWISE_XOR_ASSIGNMENT=67
    LEFT_SHIFT_ASSIGNMENT=68
    RIGHT_SHIFT_ASSIGNMENT=69
    OPEN_PAREN=70
    CLOSED_PAREN=71
    OPEN_BRACKET=72
    CLOSED_BRACKET=73
    COLON=74
    END=75
    TAB=76
    COMMA=77
    WS=78

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MathGrammarParser.StatContext)
            else:
                return self.getTypedRuleContext(MathGrammarParser.StatContext,i)


        def getRuleIndex(self):
            return MathGrammarParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = MathGrammarParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 22
                self.stat()
                self.state = 25 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MathGrammarParser.DEF) | (1 << MathGrammarParser.STRING) | (1 << MathGrammarParser.INTEGER) | (1 << MathGrammarParser.FLOAT) | (1 << MathGrammarParser.ASSIGNMENT))) != 0) or _la==MathGrammarParser.OPEN_PAREN):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_def(self):
            return self.getTypedRuleContext(MathGrammarParser.Function_defContext,0)


        def expr(self):
            return self.getTypedRuleContext(MathGrammarParser.ExprContext,0)


        def END(self):
            return self.getToken(MathGrammarParser.END, 0)

        def ASSIGNMENT(self):
            return self.getToken(MathGrammarParser.ASSIGNMENT, 0)

        def function_call(self):
            return self.getTypedRuleContext(MathGrammarParser.Function_callContext,0)


        def getRuleIndex(self):
            return MathGrammarParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)




    def stat(self):

        localctx = MathGrammarParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 36
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 27
                self.function_def()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 28
                self.expr(0)
                self.state = 29
                self.match(MathGrammarParser.END)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 31
                self.match(MathGrammarParser.ASSIGNMENT)
                self.state = 32
                self.expr(0)
                self.state = 33
                self.match(MathGrammarParser.END)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 35
                self.function_call()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_callContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(MathGrammarParser.STRING, 0)

        def OPEN_PAREN(self):
            return self.getToken(MathGrammarParser.OPEN_PAREN, 0)

        def CLOSED_PAREN(self):
            return self.getToken(MathGrammarParser.CLOSED_PAREN, 0)

        def arg_list(self):
            return self.getTypedRuleContext(MathGrammarParser.Arg_listContext,0)


        def getRuleIndex(self):
            return MathGrammarParser.RULE_function_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_call" ):
                listener.enterFunction_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_call" ):
                listener.exitFunction_call(self)




    def function_call(self):

        localctx = MathGrammarParser.Function_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(MathGrammarParser.STRING)
            self.state = 39
            self.match(MathGrammarParser.OPEN_PAREN)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 32)) & ~0x3f) == 0 and ((1 << (_la - 32)) & ((1 << (MathGrammarParser.STRING - 32)) | (1 << (MathGrammarParser.INTEGER - 32)) | (1 << (MathGrammarParser.FLOAT - 32)) | (1 << (MathGrammarParser.OPEN_PAREN - 32)))) != 0):
                self.state = 40
                self.arg_list()


            self.state = 43
            self.match(MathGrammarParser.CLOSED_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Arg_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MathGrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(MathGrammarParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MathGrammarParser.COMMA)
            else:
                return self.getToken(MathGrammarParser.COMMA, i)

        def getRuleIndex(self):
            return MathGrammarParser.RULE_arg_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArg_list" ):
                listener.enterArg_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArg_list" ):
                listener.exitArg_list(self)




    def arg_list(self):

        localctx = MathGrammarParser.Arg_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_arg_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.expr(0)
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MathGrammarParser.COMMA:
                self.state = 46
                self.match(MathGrammarParser.COMMA)
                self.state = 47
                self.expr(0)
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(MathGrammarParser.DEF, 0)

        def STRING(self):
            return self.getToken(MathGrammarParser.STRING, 0)

        def OPEN_PAREN(self):
            return self.getToken(MathGrammarParser.OPEN_PAREN, 0)

        def CLOSED_PAREN(self):
            return self.getToken(MathGrammarParser.CLOSED_PAREN, 0)

        def COLON(self):
            return self.getToken(MathGrammarParser.COLON, 0)

        def arg_list_literal(self):
            return self.getTypedRuleContext(MathGrammarParser.Arg_list_literalContext,0)


        def getRuleIndex(self):
            return MathGrammarParser.RULE_function_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_def" ):
                listener.enterFunction_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_def" ):
                listener.exitFunction_def(self)




    def function_def(self):

        localctx = MathGrammarParser.Function_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_function_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(MathGrammarParser.DEF)
            self.state = 54
            self.match(MathGrammarParser.STRING)
            self.state = 55
            self.match(MathGrammarParser.OPEN_PAREN)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MathGrammarParser.STRING:
                self.state = 56
                self.arg_list_literal()


            self.state = 59
            self.match(MathGrammarParser.CLOSED_PAREN)
            self.state = 60
            self.match(MathGrammarParser.COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Arg_list_literalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(MathGrammarParser.STRING)
            else:
                return self.getToken(MathGrammarParser.STRING, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MathGrammarParser.COMMA)
            else:
                return self.getToken(MathGrammarParser.COMMA, i)

        def getRuleIndex(self):
            return MathGrammarParser.RULE_arg_list_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArg_list_literal" ):
                listener.enterArg_list_literal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArg_list_literal" ):
                listener.exitArg_list_literal(self)




    def arg_list_literal(self):

        localctx = MathGrammarParser.Arg_list_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arg_list_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(MathGrammarParser.STRING)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MathGrammarParser.COMMA:
                self.state = 63
                self.match(MathGrammarParser.COMMA)
                self.state = 64
                self.match(MathGrammarParser.STRING)
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SuiteContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TAB(self):
            return self.getToken(MathGrammarParser.TAB, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MathGrammarParser.StatContext)
            else:
                return self.getTypedRuleContext(MathGrammarParser.StatContext,i)


        def getRuleIndex(self):
            return MathGrammarParser.RULE_suite

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSuite" ):
                listener.enterSuite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSuite" ):
                listener.exitSuite(self)




    def suite(self):

        localctx = MathGrammarParser.SuiteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_suite)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(MathGrammarParser.T__0)
            self.state = 71
            self.match(MathGrammarParser.TAB)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MathGrammarParser.DEF) | (1 << MathGrammarParser.STRING) | (1 << MathGrammarParser.INTEGER) | (1 << MathGrammarParser.FLOAT) | (1 << MathGrammarParser.ASSIGNMENT))) != 0) or _la==MathGrammarParser.OPEN_PAREN:
                self.state = 72
                self.stat()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_call(self):
            return self.getTypedRuleContext(MathGrammarParser.Function_callContext,0)


        def term(self):
            return self.getTypedRuleContext(MathGrammarParser.TermContext,0)


        def expr(self):
            return self.getTypedRuleContext(MathGrammarParser.ExprContext,0)


        def ADDITION(self):
            return self.getToken(MathGrammarParser.ADDITION, 0)

        def SUBTRACTION(self):
            return self.getToken(MathGrammarParser.SUBTRACTION, 0)

        def getRuleIndex(self):
            return MathGrammarParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MathGrammarParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 79
                self.function_call()
                pass

            elif la_ == 2:
                self.state = 80
                self.term(0)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 91
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 89
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = MathGrammarParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 83
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 84
                        self.match(MathGrammarParser.ADDITION)
                        self.state = 85
                        self.term(0)
                        pass

                    elif la_ == 2:
                        localctx = MathGrammarParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 86
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 87
                        self.match(MathGrammarParser.SUBTRACTION)
                        self.state = 88
                        self.term(0)
                        pass

             
                self.state = 93
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self):
            return self.getTypedRuleContext(MathGrammarParser.FactorContext,0)


        def term(self):
            return self.getTypedRuleContext(MathGrammarParser.TermContext,0)


        def MULTIPLICATION(self):
            return self.getToken(MathGrammarParser.MULTIPLICATION, 0)

        def DIVISION(self):
            return self.getToken(MathGrammarParser.DIVISION, 0)

        def EXPONENT(self):
            return self.getToken(MathGrammarParser.EXPONENT, 0)

        def getRuleIndex(self):
            return MathGrammarParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)



    def term(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MathGrammarParser.TermContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_term, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.factor()
            self._ctx.stop = self._input.LT(-1)
            self.state = 108
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 106
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                    if la_ == 1:
                        localctx = MathGrammarParser.TermContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_term)
                        self.state = 97
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 98
                        self.match(MathGrammarParser.MULTIPLICATION)
                        self.state = 99
                        self.factor()
                        pass

                    elif la_ == 2:
                        localctx = MathGrammarParser.TermContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_term)
                        self.state = 100
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 101
                        self.match(MathGrammarParser.DIVISION)
                        self.state = 102
                        self.factor()
                        pass

                    elif la_ == 3:
                        localctx = MathGrammarParser.TermContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_term)
                        self.state = 103
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 104
                        self.match(MathGrammarParser.EXPONENT)
                        self.state = 105
                        self.factor()
                        pass

             
                self.state = 110
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class FactorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_PAREN(self):
            return self.getToken(MathGrammarParser.OPEN_PAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(MathGrammarParser.ExprContext,0)


        def CLOSED_PAREN(self):
            return self.getToken(MathGrammarParser.CLOSED_PAREN, 0)

        def number(self):
            return self.getTypedRuleContext(MathGrammarParser.NumberContext,0)


        def STRING(self):
            return self.getToken(MathGrammarParser.STRING, 0)

        def getRuleIndex(self):
            return MathGrammarParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)




    def factor(self):

        localctx = MathGrammarParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_factor)
        try:
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MathGrammarParser.OPEN_PAREN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.match(MathGrammarParser.OPEN_PAREN)
                self.state = 112
                self.expr(0)
                self.state = 113
                self.match(MathGrammarParser.CLOSED_PAREN)
                pass
            elif token in [MathGrammarParser.INTEGER, MathGrammarParser.FLOAT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.number()
                pass
            elif token in [MathGrammarParser.STRING]:
                self.enterOuterAlt(localctx, 3)
                self.state = 116
                self.match(MathGrammarParser.STRING)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NumberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MathGrammarParser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MathGrammarParser.FLOAT, 0)

        def getRuleIndex(self):
            return MathGrammarParser.RULE_number

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)




    def number(self):
